add task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,9 @@
+@import "./variable";
+@import "./function";
+@import "./page";
+
 body {
   margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
+
