--- a/src/styles/utils/_functions.scss
+++ b/src/styles/utils/_functions.scss
@@ -1,3 +1,3 @@
 @function get-margin-size($number-of-day) {
-  @return ($square-size * $number-of-day)+($gap-size * $number-of-day);
+  @return (($square-size * $number-of-day) + ($gap-size * $number-of-day));
 }
