--- a/src/styles/variable.scss
+++ b/src/styles/variable.scss
@@ -3,10 +3,5 @@ $day-size: 100px;
 $block-gap: 1px;
 $calendar-padding: 10px;
 $count-columns: 7;
-$days: mon 0,
-  tue calc(#{$day-size} + $block-gap),
-  wed calc((#{$day-size * 2}) + ($block-gap * 2)),
-  thu calc((#{$day-size * 3}) + ($block-gap * 3)),
-  fri calc((#{$day-size * 4}) + ($block-gap * 4)),
-  sat calc((#{$day-size * 5}) + ($block-gap * 5)),
-  sun calc((#{$day-size * 6}) + ($block-gap * 6));
+$days: mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6;
+
