add task solution

--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -1,8 +1,9 @@
-html {
+html, body {
+  height: 100%;
+  margin: 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  position: relative;
 }
 
 .calendar {
@@ -13,6 +14,9 @@ html {
   width: width-calendar($day-size);
 
   &__day {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     box-sizing: border-box;
     background: $block-bg;
     width: $day-size;
