--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -21,7 +21,7 @@ body {
     background-color: $cell-color;
     height: $cell-size;
     width: $cell-size;
-    border: 1px solid black;
+    border: 1px solid #000;
     display: flex;
     align-items: center;
     justify-content: center;
