add task solution

--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -1,6 +1,5 @@
-html, body {
+html {
   height: 100%;
-  margin: 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -50,7 +49,7 @@ html, body {
   @each $day, $margin-left in $days {
     &--day--#{$day} {
       .calendar__day:first-child {
-        margin-left: $margin-left * $day-size;
+        margin-left: ($block-gap + $day-size) * $margin-left ;
       }
     }
   }
