--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,12 +3,12 @@ $cell-gap: 1px;
 $cell-color: #eee;
 $cell-color-hover: #ffd3e1;
 $number-size: 30px;
-$number-font: Arial;
+$number-font: Arial, sans-serif;
 $number-color: #000;
 $week-days: mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6;
 
 body {
-  margin: 0 20px;
+  margin: 0;
 }
 
 .calender {
