--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -21,7 +21,7 @@ body {
   list-style: none;
 }
 
-.day {
+.calendar__day {
   width: 100px;
   height: 100px;
   padding: 10px;
@@ -37,132 +37,167 @@ body {
   cursor: pointer;
   transition-duration: 0.5s;
 }
-
-.day:hover {
+.calendar__day:hover {
   transform: translateY(-20px);
   background-color: #ffc0cb;
 }
 
-li:nth-child(n+1)::before {
+.calendar__day:nth-child(n+1)::before {
   content: "1";
 }
 
-li:nth-child(n+2)::before {
+.calendar__day:nth-child(n+2)::before {
   content: "2";
 }
 
-li:nth-child(n+3)::before {
+.calendar__day:nth-child(n+3)::before {
   content: "3";
 }
 
-li:nth-child(n+4)::before {
+.calendar__day:nth-child(n+4)::before {
   content: "4";
 }
 
-li:nth-child(n+5)::before {
+.calendar__day:nth-child(n+5)::before {
   content: "5";
 }
 
-li:nth-child(n+6)::before {
+.calendar__day:nth-child(n+6)::before {
   content: "6";
 }
 
-li:nth-child(n+7)::before {
+.calendar__day:nth-child(n+7)::before {
   content: "7";
 }
 
-li:nth-child(n+8)::before {
+.calendar__day:nth-child(n+8)::before {
   content: "8";
 }
 
-li:nth-child(n+9)::before {
+.calendar__day:nth-child(n+9)::before {
   content: "9";
 }
 
-li:nth-child(n+10)::before {
+.calendar__day:nth-child(n+10)::before {
   content: "10";
 }
 
-li:nth-child(n+11)::before {
+.calendar__day:nth-child(n+11)::before {
   content: "11";
 }
 
-li:nth-child(n+12)::before {
+.calendar__day:nth-child(n+12)::before {
   content: "12";
 }
 
-li:nth-child(n+13)::before {
+.calendar__day:nth-child(n+13)::before {
   content: "13";
 }
 
-li:nth-child(n+14)::before {
+.calendar__day:nth-child(n+14)::before {
   content: "14";
 }
 
-li:nth-child(n+15)::before {
+.calendar__day:nth-child(n+15)::before {
   content: "15";
 }
 
-li:nth-child(n+16)::before {
+.calendar__day:nth-child(n+16)::before {
   content: "16";
 }
 
-li:nth-child(n+17)::before {
+.calendar__day:nth-child(n+17)::before {
   content: "17";
 }
 
-li:nth-child(n+18)::before {
+.calendar__day:nth-child(n+18)::before {
   content: "18";
 }
 
-li:nth-child(n+19)::before {
+.calendar__day:nth-child(n+19)::before {
   content: "19";
 }
 
-li:nth-child(n+20)::before {
+.calendar__day:nth-child(n+20)::before {
   content: "20";
 }
 
-li:nth-child(n+21)::before {
+.calendar__day:nth-child(n+21)::before {
   content: "21";
 }
 
-li:nth-child(n+22)::before {
+.calendar__day:nth-child(n+22)::before {
   content: "22";
 }
 
-li:nth-child(n+23)::before {
+.calendar__day:nth-child(n+23)::before {
   content: "23";
 }
 
-li:nth-child(n+24)::before {
+.calendar__day:nth-child(n+24)::before {
   content: "24";
 }
 
-li:nth-child(n+25)::before {
+.calendar__day:nth-child(n+25)::before {
   content: "25";
 }
 
-li:nth-child(n+26)::before {
+.calendar__day:nth-child(n+26)::before {
   content: "26";
 }
 
-li:nth-child(n+27)::before {
+.calendar__day:nth-child(n+27)::before {
   content: "27";
 }
 
-li:nth-child(n+28)::before {
+.calendar__day:nth-child(n+28)::before {
   content: "28";
 }
 
-li:nth-child(n+29)::before {
+.calendar__day:nth-child(n+29)::before {
   content: "29";
 }
 
-li:nth-child(n+30)::before {
+.calendar__day:nth-child(n+30)::before {
   content: "30";
 }
 
-li:nth-child(n+31)::before {
+.calendar__day:nth-child(n+31)::before {
   content: "31";
+}
+
+.calendar--month-length-30 .calendar__day:nth-child(1n+31) {
+  display: none;
+}
+
+.calendar--month-length-29 .calendar__day:nth-child(1n+30) {
+  display: none;
+}
+
+.calendar--month-length-28 .calendar__day:nth-child(1n+29) {
+  display: none;
+}
+
+.calendar--star-day-tue .calendar__day:first-child {
+  margin-left: 101px;
+}
+
+.calendar--star-day-wed .calendar__day:first-child {
+  margin-left: 202px;
+}
+
+.calendar--star-day-thu .calendar__day:first-child {
+  margin-left: 303px;
+}
+
+.calendar--star-day-fri .calendar__day:first-child {
+  margin-left: 404px;
+}
+
+.calendar--star-day-sat .calendar__day:first-child {
+  margin-left: 505px;
+}
+
+.calendar--star-day-sun .calendar__day:first-child {
+  margin-left: 606px;
 }/*# sourceMappingURL=main.css.map */
