add task solution

--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -16,12 +16,11 @@ html {
     display: flex;
     justify-content: center;
     align-items: center;
-    box-sizing: border-box;
     background: $block-bg;
     width: $day-size;
     height: $day-size;
     border: 1px solid #000;
-    transition-duration: 0.5s;
+    transition: background-color, transform, 0.5s;
 
     @for $i from 1 through 31 {
       &:nth-child(#{$i})::before {
@@ -33,7 +32,7 @@ html {
 
     &:hover {
       cursor: pointer;
-      background: pink;
+      background-color: pink;
       transform: translateY(-20px);
     }
   }
