--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -1,7 +1,6 @@
 html {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-}
+  }
 
 body {
   margin: 0;
@@ -32,12 +31,12 @@ body {
 
     &__day:hover {
       cursor: pointer;
-      background-color: pink;
+      background-color: $highlite-color;
       transform: translateY(-20px);
     }
 
     &__day::before {
-      font-size: 30px;
+      font-size: $calendar-size;
     }
   }
 
