--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -4,46 +4,20 @@
 .calendar {
   display: flex;
   flex-wrap: wrap;
+  margin: 50px auto;
   gap: $gap-size;
-  width: 750px;
-  padding: 10px;
+  padding: $calendar-padding;
+  width: $size-box-day * $week + $calendar-padding * ($week - 1);
 
-  $days: "mon" 0, "tue" 1, "wed" 2, "thu" 3, "fri" 4, "sat" 5, "sun" 6;
-
-  @each $day, $number-of-day in $days {
+  @each $day, $size in $days {
     &--start-day--#{$day} .calendar__day:first-child {
-      margin-left: get-margin-size($number-of-day);
+      margin-left: #{$size};
     }
   }
 
-  @for $length from 28 through 31 {
-    &--month-length--#{$length} .calendar__day:nth-child(n + #{$length + 1}) {
-      visibility: hidden;
-    }
-  }
-
-  &__day {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    box-sizing: border-box;
-    height: $square-size;
-    width: $square-size;
-    border: 1px solid black;
-    background-color: #eee;
-    list-style-type: none;
-    transition: background-color 0.5s, transform 0.5s;
-
-    @for $i from 1 through 31 {
-      &:nth-child(#{$i})::before {
-        content: "#{$i}";
-      }
-    }
-
-    &:hover {
-      cursor: pointer;
-      background-color: #ffc0cb;
-      transform: translateY(-20px);
+  @for $curret-month-size from 28 through 31 {
+    &--month-length--#{$curret-month-size} &__day:nth-child(n + #{$curret-month-size + 1}) {
+      display: none;
     }
   }
 }
