--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -1,2 +1,17 @@
+$size-box-day: 100px;
 $square-size: 100px;
 $gap-size: 1px;
+$week: 7;
+$calendar-padding: 10px;
+$day-color: #eee;
+$day-color-active: pink;
+$border-color: black;
+$days: (
+  mon: 1,
+  tue: ($size-box-day + 1) * 1,
+  wed: ($size-box-day + 1) * 2,
+  thu: ($size-box-day + 1) * 3,
+  fri: ($size-box-day + 1) * 4,
+  sat: ($size-box-day + 1) * 5,
+  sun: ($size-box-day + 1) * 6,
+);
