--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,7 +4,9 @@ $box-size: 100px;
 $gap-size: 1px;
 $border-size: 1px;
 $calendar-padding: 10px;
-$days: 1, 2, 3, 4, 5, 6, 7;
-$calendar-width: ($box-size * 7) + ($gap-size * 6) + ($calendar-padding * 2);
+$number-size: 30px;
+$number-font: Arial, sans-serif;
+$week-days: mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6;
+$calendar-width: calc(7 * ($box-size + 10px));;
 
 
