--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,65 @@
+$width-day: 100px;
+$height-day: 100px;
+$gap: 1px;
+$padding: 10px;
+$background-day: #eee;
+$font-family: Arial, san-serif;
+
+html {
+  font-family: $font-family;
+  font-size: 30px;
+}
+
 body {
   margin: 0;
+}
+
+.calendar{
+  box-sizing: border-box;
+  width: ($width-day) * 7 + $padding * 2 + $gap * 6;
+  padding: $padding;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  gap: $gap;
+
+  &__day {
+    box-sizing: border-box;
+    position: relative;
+    width: $width-day;
+    height: $height-day;
+    background-color: $background-day;
+    border: 1px solid black;
+    transition: transform 0.5s;
+    cursor: pointer;
+
+    &:hover {
+      background-color: pink;
+      transform: translateY(-20px);
+    }
+
+    @for $days from 1 through 31 {
+      &:nth-child(#{$days})::before  {
+        content: '#{$days}';
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+      }
+    }
+  }
+
+  $week-days: ("mon": 0, "tue": 1, "wed": 2, "thu": 3, "fri": 4, "sat": 5, "sun": 6);
+
+  @each $day, $marg-index in $week-days{
+    &--start-day--#{$day} :first-child {
+      margin-left: ($width-day + $gap) * $marg-index;
+    }
+  }
+
+  @for $i from 28 to 31 {
+    &--month-length--#{$i} :nth-child(n + #{$i + 1}){
+      display: none;
+    }
+  }
 }
