--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,16 +1,11 @@
-$width-day: 100px;
-$height-day: 100px;
-$gap: 1px;
-$padding: 10px;
-$background-day: #eee;
-$font-family: Arial, san-serif;
-
-html {
-  font-family: $font-family;
-  font-size: 30px;
-}
+@import "utils/variables";
+@import "utils/mixins";
 
 body {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   margin: 0;
 }
 
@@ -24,14 +19,7 @@ body {
   gap: $gap;
 
   &__day {
-    box-sizing: border-box;
-    position: relative;
-    width: $width-day;
-    height: $height-day;
-    background-color: $background-day;
-    border: 1px solid black;
-    transition: transform 0.5s;
-    cursor: pointer;
+    @include one-box;
 
     &:hover {
       background-color: pink;
@@ -48,8 +36,6 @@ body {
       }
     }
   }
-
-  $week-days: ("mon": 0, "tue": 1, "wed": 2, "thu": 3, "fri": 4, "sat": 5, "sun": 6);
 
   @each $day, $marg-index in $week-days{
     &--start-day--#{$day} :first-child {
