--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,7 @@
 @import "utils/variables";
 @import "utils/mixins";
 
-body {
+.container {
   height: 100vh;
   display: flex;
   flex-direction: column;
