--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,58 @@
+$cell-size: 100px;
+$cell-gap: 1px;
+$cell-color: #eee;
+$cell-color-hover: #ffd3e1;
+$number-size: 30px;
+$number-font: Arial, sans-serif;
+$number-color: #000;
+$week-days: mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6;
+
 body {
   margin: 0;
+}
+
+.calender {
+  display: flex;
+  flex-wrap: wrap;
+  gap: $cell-gap;
+  max-width: calc(7 * ($cell-size + 10px));
+
+  @for $length from 28 through 31 {
+    &--month-length-#{$length} :nth-child(n + #{$length + 1}) {
+      display: none;
+    }
+  }
+
+  @each $day, $index in $week-days {
+    &--start-#{$day} :first-child {
+      margin-left: ($cell-size + $cell-gap + 2px) * $index;
+    }
+  }
+
+  &__day {
+    background-color: $cell-color;
+    height: $cell-size;
+    width: $cell-size;
+    border: 1px solid #000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    @for $cell from 1 through 31 {
+      &:nth-child(#{$cell})::before {
+        content: "#{$cell}";
+        font-family: $number-font;
+        font-size: $number-size;
+        text-align: center;
+        color: $number-color;
+      }
+    }
+
+    &:hover {
+      cursor: pointer;
+      background-color: $cell-color-hover;
+      transform: translateY(-20px);
+      transition-duration: 0.5s;
+    }
+  }
 }
