--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,9 +4,12 @@
   box-sizing: border-box;
 }
 
+html {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 body {
   margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 .calendar {
@@ -17,6 +20,7 @@ body {
   width: $calendar-width;
   gap: $gap;
   padding-inline: $calendar-padding;
+  padding-top: 30px;
 
   &__day {
     display: flex;
@@ -30,7 +34,7 @@ body {
     background-color: $color-of-background;
     border: 1px solid $color-of-border;
     cursor: pointer;
-    transition: 0.5s;
+    transition: transform $transitionDuration;
 
     &:hover {
       cursor: pointer;
