--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -34,7 +34,7 @@ body {
     background-color: $color-of-background;
     border: 1px solid $color-of-border;
     cursor: pointer;
-    transition: transform $transitionDuration;
+    transition: transform $transition-duration;
 
     &:hover {
       cursor: pointer;
