--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -7,4 +7,4 @@ $color-of-background: #eee;
 $color-of-border: #000;
 $calendar-padding: 10px;
 $calendar-width: ($count-of-columns * $box-size) + ($gap * 6) + (2 * $calendar-padding);
-$transitionDuration: 0.5s;
+$transition-duration: 0.5s;
