--- a/src/styles/utilis/general.scss
+++ b/src/styles/utilis/general.scss
@@ -5,6 +5,10 @@
 html {
   font-family: Arial, sans-serif;
   font-size: 30px;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 body {
