--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,6 +10,14 @@ $days-of-week: (
   'san' 6
 );
 
+* {
+  box-sizing: border-box;
+}
+
+html {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 body {
   margin: 0;
 }
@@ -23,23 +31,21 @@ body {
   line-height: $day-block-size;
   text-align: center;
   padding: 10px;
-}
 
-.calendar__day {
-  box-sizing: border-box;
-  border: 1px solid black;
-  background-color: #eee;
-  width: 100px;
-  height: 100px;
-  transition: transform 0.5s;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-}
+  &__day {
+    border: 1px solid black;
+    background-color: #eee;
+    width: 100px;
+    height: 100px;
+    transition: transform 0.5s, background-color 0.5s;
+    font-size: 30px;
+  }
 
-.calendar__day:hover {
-  background-color: pink;
-  cursor: pointer;
-  transform: translateY(-20px);
+  &__day:hover {
+    background-color: pink;
+    cursor: pointer;
+    transform: translateY(-20px);
+  }
 }
 
 @each $day, $number in $days-of-week {
