--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,13 +11,19 @@ body {
   max-width: 726px;  /* padding-inline = 20px + gap = 6px */
   gap: 1px;
 
-  $start-days: 'mon' ($size-px * 0) 0, 'tue' ($size-px * 1) 1, 'wed' ($size-px * 2) 2, /* the third variable $indent is based on the gap size which is 1px */
-  'thu' ($size-px * 3) 3, 'fri' ($size-px * 4) 4, 'sat' ($size-px * 5) 5, 'sun' ($size-px * 6) 6;
+  $start-days: 'mon' ($size-px * 0) 0,
+  'tue' ($size-px * 1) 1,
+  'wed' ($size-px * 2) 2,
+  'thu' ($size-px * 3) 3,
+  'fri' ($size-px * 4) 4,
+  'sat' ($size-px * 5) 5,
+  'sun' ($size-px * 6) 6;
+
 
   @each $name, $size, $indent in $start-days {
     &--start-day--#{$name}>&__day:nth-child(1) {
       margin-left: $size + $indent;
-    }
+    } /* the third variable $indent is based on the gap size which is 1px */
   }
 
   @for $day from 28 through 31 {
