--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -1,5 +1,12 @@
 $day-size: 100px;
 $gap: 1px;
 $padding: 10px;
-$start-days: mon, tue, wed, thu, fri, sat, sun;
+$week: (
+  0: "mon",
+  1: "tue",
+  2: "wed",
+  3: "thu",
+  4: "fri",
+  5: "sat",
+  6: "sun");
 $month-length: 28, 29, 30, 31;
