--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,45 @@
+* {
+  font-family: Arial, sans-serif;
+}
+
 body {
   margin: 0;
+}
+
+.calendar {
+  margin: 0 auto;
+  padding: 20px;
+  width: calc(100px * 7) + 6px;
+
+  display: flex;
+  gap: 1px;
+  flex-wrap: wrap;
+
+  &__day {
+    position: relative;
+    box-sizing: border-box;
+    width: 100px;
+    height: 100px;
+    background-color: #eee;
+    border: 1px solid black;
+    font-size: 30px;
+    transition: all 0.5s;
+
+    @for $i from 1 through 31 {
+      &:nth-child(#{$i}):before {
+        content: "#{$i}";
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+    }
+
+    &:hover {
+      cursor: pointer;
+      background-color: #FFBFCB;
+      transform: translateY(-20px);
+    }
+
+  }
 }
