--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,18 +4,17 @@ body {
   margin: 0;
 }
 
-.body {
-  display: flex;
-  justify-content: center;
-}
-
 .calendar {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
   padding: 10px;
   display: flex;
   flex-wrap: wrap;
   gap: 1px;
-  min-width: $month-block-width;
-  max-width: $month-block-width;
+  width: $month-block-width;
 
   &__day {
     position: relative;
@@ -51,16 +50,16 @@ body {
   }
 }
 
-@each $day, $margin in $days {
-  .calendar-start-day--#{$day} {
+@each $dayName, $dayNum in $days {
+  .calendar--start-day--#{$dayName} {
     .calendar__day:first-child {
-      margin-left: #{$margin};
+      margin-left: ($month-block-width / 7) * $dayNum - ($month-block-width / 7);
     }
   }
 }
 
 @for $finish from 28 through 31 {
-  .calendar-month-length--#{$finish} {
+  .calendar--month-length--#{$finish} {
     .calendar__day:nth-child(-n + #{$finish}){
       visibility: visible;
     }
