--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -46,7 +46,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
   justify-content: center;
-  transition: transform $transition-duration;
+  transition: transform, $transition-duration;
 }
 
 .calendar__day:hover {
