add task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,7 +3,7 @@ $border-width: 1px;
 $day-block-gap: 1px;
 $margin: 10px;
 $columns: 7;
-$trasition-duration: 0.5s;
+$transition-duration: 0.5s;
 $days-of-week: (
  "mon" 0,
 "tue" 1,
@@ -12,13 +12,12 @@ $days-of-week: (
 "fri" 4,
 "sat" 5,
 "sun" 6,
-
 );
 
 *{
   box-sizing: border-box;
+  text-align: center;
 }
-
 
 body {
   margin: 0;
@@ -46,7 +45,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
   justify-content: center;
-  transition: transform, $transition-duration;
+  transition: transform $transition-duration;
 }
 
 .calendar__day:hover {
