--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -21,11 +21,11 @@ h1 {
   gap: $distance-between;
   flex-wrap: wrap;
 
-  $days: mon 0, tue calc($field-size + $distance-between), wed calc(($field-size * 2) + ($distance-between * 2)), thu calc(($field-size * 3) + ($distance-between * 3)), calc(($field-size * 4) + ($distance-between * 4)), sat calc(($field-size * 5) + ($distance-between * 5)), sun calc(($field-size * 6) + ($distance-between * 6));
+  $days: mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6;
 
-  @each $day-name, $day-value in $days {
-    &--start-day-#{$day-name} > &__day:nth-child(1) {
-      margin-left: $day-value;
+  @each $day, $num in $days {
+    &--start-day-#{$day} &__day:first-child {
+      margin-left: ($distance-between + $field-size) * $num;
     }
   }
 
