--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,75 @@
+@import "./variables";
+
+html {
+  font-family: Arial, sans-serif;
+}
+
 body {
   margin: 0;
+}
+
+h1 {
+  text-align: center;
+}
+
+.calendar {
+  margin: 0 auto;
+  padding: 20px;
+  width: $calendar-size;
+
+  display: flex;
+  gap: $distance-between;
+  flex-wrap: wrap;
+
+  $days: mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6;
+
+  @each $day, $num in $days {
+    &--start-day-#{$day} &__day:first-child {
+      margin-left: ($distance-between + $field-size) * $num;
+    }
+  }
+
+  $length-month: 28, 29, 30, 31;
+
+  @each $num in $length-month {
+
+    &--month-length-#{$num} > &__day {
+
+      &:nth-child(n + #{$num + 1}) {
+        display: none;
+      }
+
+      @for $i from 1 through $num {
+
+        &:nth-child(#{$i}):before {
+          content: "#{$i}";
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+        }
+
+      }
+
+    }
+
+  }
+
+  &__day {
+    position: relative;
+    box-sizing: border-box;
+    width: $field-size;
+    height: $field-size;
+    background-color: $background-main-color;
+    border: 1px solid black;
+    font-size: 30px;
+    transition: all 0.5s;
+
+    &:hover {
+      cursor: pointer;
+      background-color: $background-hover-color;
+      transform: translateY(-20px);
+    }
+
+  }
 }
