--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -1,12 +1,11 @@
 $day-size: 100px;
-$gap: 1px;
-$padding: 10px;
+$calendar-gap: 1px;
+$calendar-padding: 10px;
 $week: (
-  0: "mon",
-  1: "tue",
-  2: "wed",
-  3: "thu",
-  4: "fri",
-  5: "sat",
-  6: "sun");
-$month-length: 28, 29, 30, 31;
+  "mon": 0,
+  "tue": 1,
+  "wed": 2,
+  "thu": 3,
+  "fri": 4,
+  "sat": 5,
+  "sun": 6);
