--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -14,6 +14,8 @@
     height: $day-block-height;
     border: 1px solid #000;
     color: #eee;
+    font-size: 30px;
+    transition: all 0.5s;
 
     &::before {
       position: absolute;
