--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,76 @@
+$cell-size: 100px;
+$gap: 1px;
+$cell-count: 7;
+$month-length: 29;
+$digit-size: 0.8 * $cell-size;
+$shift: $cell-size / 2;
+$day-of-week: wed;
+
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
+}
+
+.calendar {
+  position: relative;
+
+  margin: 0 auto;
+  margin-block: calc(10vh);
+
+  width: ($cell-size + $gap) * $cell-count;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1px;
+
+  &__cell {
+    position: relative;
+    width: $cell-size;
+    height: $cell-size;
+    background-color: #eee;
+    border: 1px solid black;
+    padding: 10px;
+
+    &:hover {
+      transform: translateY(-20px);
+      background-color: pink;
+      transition-duration: 0.5s;
+      cursor: pointer;
+    }
+
+    @for $length from $month-length through 31 {
+      &--#{$length + 1} {
+        display: none;
+      }
+    }
+
+    @for $count from 1 through 31 {
+      &--#{$count}::before {
+        content: "#{$count}";
+        display: block;
+        width: $digit-size;
+        height: $digit-size;
+
+        position: absolute;
+
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 30px;
+
+        top: $cell-size / 3;
+        left: $cell-size / 3;
+      }
+    }
+
+    $week: 1 mon, 2 tue, 3 wed, 4 thu, 5 fri, 6 sat, 7 sun;
+
+    &--start-day--#{$day-of-week} {
+      @each $number, $day in $week {
+        @if $day == $day-of-week {
+          margin-left: ($number - 1) * $cell-size + $number - $gap;
+        }
+      }
+    }
+  }
 }
