--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,7 @@
-body {
+@import '../styles/utils/variables';
+@import '../styles/blocks/calendar';
+
+* {
   margin: 0;
+  box-sizing: border-box;
 }
