--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,10 +1,5 @@
-$field-cell: 100px;
-$width-limit: ($field-cell * 7) + 6px;
-
-body {
-  display: flex;
-  margin: auto;
-}
+@import './variables';
+@import './basic';
 
 .calendar {
   margin: 20px auto;
@@ -18,45 +13,38 @@ body {
   flex-wrap: wrap;
   text-align: center;
 
-
-}
-
   @for $b from 28 through 31 {
-  .calendar--month-length-#{$b} > .day:nth-child(#{$b}) ~ * {
-    display: none;
+    &--month-length-#{$b} > .calendar__day:nth-child(#{$b}) ~ * {
+      display: none;
+    }
   }
-}
 
-$start-day: ("mon": 0, "tue": 1, "wed": 2, "thu": 3, "fri": 4, "sut": 5, "sun": 6);
-
-
-@each $name, $glyph in $start-day {
-  .calendar--start-day-#{$name} > .day:nth-child(1) {
-    margin-left: ($field-cell * $glyph) + $glyph;
+  @each $name, $glyph in $start-day {
+    &--start-day-#{$name} > .calendar__day:nth-child(1) {
+      margin-left: ($field-cell * $glyph) + $glyph;
+    }
   }
-}
+
+  &__day {
+    box-sizing: border-box;
+    height: $field-cell;
+    width: $field-cell;
+    background-color: #eee;
+    border: 1px solid black;
+    transition: 0.5s;
 
 
-.day {
-  box-sizing: border-box;
-  height: $field-cell;
-  width: $field-cell;
-  background-color: #eee;
-  border: 1px solid black;
-  transition: 0.5s;
-}
+    &:hover {
+      cursor: pointer;
+      background-color: pink;
+      transform: translateY(-20px);
+    }
 
-.day:hover {
-  cursor: pointer;
-  background-color: pink;
-  transform: translateY(-20px);
-}
-
-
-
-@for $i from 1 through 31 {
-  .day:nth-child(#{$i})::before {
-    font: 30px Arial ,sans-serif;
-    content: '#{$i}';
+    @for $i from 1 through 31 {
+      &:nth-child(#{$i})::before {
+        font: 30px Arial ,sans-serif;
+        content: '#{$i}';
+      }
+    }
   }
 }
