--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,16 +7,19 @@ $width-of-block: 100px;
 $amount-of-days-in-row: 7;
 $num-days: 31;
 $start-day: 7;
-$month-length: 28;
+$month-length: 29;
 
 
 body {
   margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
 @for $i from 1 through $num-days {
   .calendar {
-    margin: 0 auto;
     display: flex;
     gap: 1px;
     flex-wrap: wrap;
