--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,7 @@
 $size: 100px;
 $space-within: 1px;
 $space-around: 10px;
-$month-length: 29;
+$month-length-values: 28, 29, 30, 31;
 $start-days: 0 "mon", 1 "tue", 2 "wed", 3 "thu", 4 "fri", 5 "sat", 6 "sun";
 
 * {
@@ -30,19 +30,30 @@ html {
   padding: $space-around;
 }
 
-@for $day from 1 through $month-length {
-  .calendar__day:nth-child(#{$day}) {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: $size;
-    width: $size;
-    background-color: #eee;
-    border: 1px solid #000;
-  }
+@each $month-length in $month-length-values {
+  .calendar--month-length--#{$month-length} {
+    @for $day from 1 through $month-length {
+      .calendar__day:nth-child(#{$day}) {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: $size;
+        width: $size;
+        background-color: #eee;
+        border: 1px solid #000;
+      }
 
-  .calendar__day:nth-child(#{$day})::before {
-    content: "#{$day}";
+      .calendar__day:nth-child(#{$day})::before {
+        content: "#{$day}";
+      }
+
+      .calendar__day:hover {
+        cursor: pointer;
+        background-color: pink;
+        transform: translate(0, -20px);
+        transition-duration: 0.5s;
+      }
+    }
   }
 }
 
@@ -50,11 +61,4 @@ html {
   .calendar--start-day--#{$start-day} :first-child {
     margin-left: $column * $size + $column * $space-within;
   }
-}
-
-.calendar__day:hover {
-  cursor: pointer;
-  background-color: pink;
-  transform: translate(0, -20px);
-  transition-duration: 0.5s;
 }
