--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -6,7 +6,7 @@ $start-day-size: $day-size + $gap-size;
 $paddings: 10px;
 $week-days: (
   mon: 0,
-  tue: $start-day-size * 1,
+  tue:  1,
   wed: $start-day-size * 2,
   thu: $start-day-size * 3,
   fri: $start-day-size * 4,
