--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,12 @@
+@import './utils/variables';
+@import './blocks/calendar';
+
 body {
   margin: 0;
+  display: flex;
+  justify-content: center;
+}
+
+* {
+  box-sizing: border-box;
 }
