--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -59,7 +59,7 @@ body {
 @each $index in $month-length {
   @for $i from $index through $num-days {
     .calendar--month-length--#{$index} :nth-child(#{$i + 1}) {
-      opacity: 0;
+      display: none;
     }
   }
 }
